--- a/VideoGameLibrary/Views/VideoGame/Index.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Index.cshtml
@@ -4,24 +4,34 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Video Game Library</h2>
 
+@using (Html.BeginForm())
+{
+    <div id="FilterSearch" class="form-horizontal">
+
+        <div class="form-group">
+            @Html.Label("Search by Name", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.TextBox("searchCriteria", null, new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            <input type="submit" value="Find Video Game" class="btn col-md-2 col-md-offset-2" />
+            <input type="button" value="Reset Video Game List" onclick="location.href = '@Url.Action("Index", "VideoGame")'" class="btn col-md-2 col-md-offset-2" />
+        </div>
+
+    </div>
+}
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.ActionLink(@Html.DisplayNameFor(model => model.Name).ToHtmlString(), "Index", new { sortOrder = "Name"})
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ReleaseDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Developer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Publisher)
+            @Html.ActionLink(@Html.DisplayNameFor(model => model.ReleaseDate).ToHtmlString(), "Index", new { sortOrder = "ReleaseDate" })
         </th>
         <th></th>
     </tr>
@@ -33,12 +43,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ReleaseDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Developer)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Publisher)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
