--- a/VideoGameLibrary/Views/VideoGame/Index.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Index.cshtml
@@ -16,6 +16,14 @@
         </div>
 
         <div class="form-group">
+            @Html.Label("Filter by Date", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.DropDownList("dateFilter",
+                     new SelectList(@ViewBag.Dates),
+                     "All Dates",
+                     new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
             <input type="submit" value="Find Video Game" class="btn col-md-2 col-md-offset-2" />
             <input type="button" value="Reset Video Game List" onclick="location.href = '@Url.Action("Index", "VideoGame")'" class="btn col-md-2 col-md-offset-2" />
         </div>
@@ -28,7 +36,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.ActionLink(@Html.DisplayNameFor(model => model.Name).ToHtmlString(), "Index", new { sortOrder = "Name"})
+            @Html.ActionLink(@Html.DisplayNameFor(model => model.Name).ToHtmlString(), "Index", new { sortOrder = "Name" })
         </th>
         <th>
             @Html.ActionLink(@Html.DisplayNameFor(model => model.ReleaseDate).ToHtmlString(), "Index", new { sortOrder = "ReleaseDate" })
@@ -36,20 +44,21 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ReleaseDate)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ReleaseDate)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
