Added Details handling and page. Updated filter so it will filter by year but show the full date, instead of filtering by date.

--- a/VideoGameLibrary/Views/VideoGame/Index.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Index.cshtml
@@ -16,10 +16,10 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("Filter by Date", htmlAttributes: new { @class = "control-label col-md-2" })
-            @Html.DropDownList("dateFilter",
-                     new SelectList(@ViewBag.Dates),
-                     "All Dates",
+            @Html.Label("Filter by Year", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.DropDownList("yearFilter",
+                     new SelectList(@ViewBag.Years),
+                     "All Years",
                      new { @class = "form-control" })
         </div>
 
