--- a/VideoGameLibrary/Views/Shared/_Layout.cshtml
+++ b/VideoGameLibrary/Views/Shared/_Layout.cshtml
@@ -8,19 +8,17 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+    <div class="navbar navbar-expand-lg navbar-light">
+        <div class="container bg-secondary">
+            <div class="navbar-brand">
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                @Html.ActionLink("Video Game Library", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand color-white" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Video Game List", "Index", "VideoGame")</li>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">@Html.ActionLink("Video Game List", "Index", "VideoGame", new { area = "" }, new { @class = "linkClean" })</li>
                 </ul>
             </div>
         </div>
