--- a/VideoGameLibrary/Views/VideoGame/Index.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Index.cshtml
@@ -1,8 +1,15 @@
 ﻿@model IEnumerable<VideoGameLibrary.Models.VideoGame>
 
+@using PagedList;
+@using PagedList.Mvc
+
 @{
     ViewBag.Title = "Index";
+
+    // cast model as a PagedList to access pagination properties
+    var pagedList = (IPagedList)Model;
 }
+
 
 <h2>Video Game Library</h2>
 
@@ -18,21 +25,21 @@
         <div class="form-group">
             @Html.Label("Filter by Year", htmlAttributes: new { @class = "control-label col-md-2" })
             @Html.DropDownList("yearFilter",
-                     new SelectList(@ViewBag.Years),
-                     "All Years",
-                     new { @class = "form-control" })
+                               new SelectList(@ViewBag.Years),
+                               "All Years",
+                               new { @class = "form-control" })
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Find Video Game" class="btn col-md-2 col-md-offset-2" />
-            <input type="button" value="Reset Video Game List" onclick="location.href = '@Url.Action("Index", "VideoGame")'" class="btn col-md-2 col-md-offset-2" />
+            <input type="submit" value="Search" class="btn col-md-2 col-md-offset-2" />
+            <input type="button" value="Reset List" onclick="location.href = '@Url.Action("Index", "VideoGame")'" class="btn col-md-2 col-md-offset-2" />
         </div>
 
     </div>
 }
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<div class="form-group">
+    <input type="button" value="Add New" onclick="location.href='@Url.Action("Create", "VideoGame")'" class="btn"/>
+</div>
 <table class="table">
     <tr>
         <th>
@@ -62,3 +69,6 @@
     }
 
 </table>
+
+Page @(pagedList.PageCount < pagedList.PageNumber ? 0 : pagedList.PageNumber) of @pagedList.PageCount
+@Html.PagedListPager(pagedList, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
