--- a/VideoGameLibrary/Content/bootstrap.css
+++ b/VideoGameLibrary/Content/bootstrap.css
@@ -74,7 +74,7 @@ body {
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #888;
+    color: white;
     text-align: left;
     background-color: #060606;
 }
@@ -3492,7 +3492,7 @@ tbody.collapse.show {
     color: #fff;
     text-align: inherit;
     white-space: nowrap;
-    background-color: transparent;
+    background-color: #2A9FD6;
     border: 0;
 }
 
