--- a/VideoGameLibrary/Views/VideoGame/Delete.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Delete.cshtml
@@ -1,13 +1,14 @@
 ﻿@model VideoGameLibrary.Models.VideoGame
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Delete Video Game";
 }
 
-<h2>Details</h2>
+<h2>Delete Video Game</h2>
 
 <div>
     <hr />
+    <h5 class="text-danger">Are you sure you want to delete this?</h5>    
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -23,6 +24,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.ReleaseDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ReleaseYear)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ReleaseYear)
         </dd>
 
         <dt>
@@ -42,9 +51,13 @@
         </dd>
 
     </dl>
-</div>
 
-<div class="form-group">
-    <input type="button" value="Edit" class="btn btn-warning" onclick="location.href='@Url.Action("Edit", "VideoGame", new { id = Model.Id })'" />
-    <input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "VideoGame")'" />
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+    <div class="form-actions no-color">
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "VideoGame")'" />
+    </div>
+    }
 </div>
