--- a/VideoGameLibrary/Views/VideoGame/Index.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Index.cshtml
@@ -18,8 +18,8 @@
     <div id="FilterSearch" class="form-horizontal">
 
         <div class="form-group">
-            @Html.Label("Search by Name", htmlAttributes: new { @class = "control-label col-md-2" })
-            @Html.TextBox("searchCriteria", null, new { @class = "form-control" })
+            @Html.Label("Search :", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.TextBox("searchCriteria", null, new { @class = "form-control textbox-color01", @placeholder = "Enter Video Game Name Here..." })
         </div>
 
         <div class="form-group">
@@ -27,18 +27,18 @@
             @Html.DropDownList("yearFilter",
                                new SelectList(@ViewBag.Years),
                                "All Years",
-                               new { @class = "form-control" })
+                               new { @class = "dropdown-item" })
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Search" class="btn col-md-2 col-md-offset-2" />
-            <input type="button" value="Reset List" onclick="location.href = '@Url.Action("Index", "VideoGame")'" class="btn col-md-2 col-md-offset-2" />
+            <input type="submit" value="Search" class="btn btn-primary col-md-1 col-md-offset-2" />
+            <input type="button" value="Reset List" onclick="location.href = '@Url.Action("Index", "VideoGame")'" class="btn btn-primary col-md-2 col-md-offset-2" />
         </div>
 
     </div>
 }
 <div class="form-group">
-    <input type="button" value="Add New" onclick="location.href='@Url.Action("Create", "VideoGame")'" class="btn"/>
+    <input type="button" value="Add New" onclick="location.href='@Url.Action("Create", "VideoGame")'" class="btn btn-primary"/>
 </div>
 <table class="table">
     <tr>
@@ -61,9 +61,11 @@
                 @Html.DisplayFor(modelItem => item.ReleaseDate)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                <div class="form-group">
+                    <input type="button" value="Details" class="btn btn-info" onclick="location.href='@Url.Action("Details", "VideoGame", new { id = item.Id })'" />
+                    <input type="button" value="Edit" class="btn btn-warning" onclick="location.href='@Url.Action("Edit", "VideoGame", new { id = item.Id })'" />
+                    <input type="button" value="Delete" class="btn btn-danger" onclick="location.href='@Url.Action("Delete", "VideoGame", new { id = item.Id })'" />
+                </div>
             </td>
         </tr>
     }
