--- a/VideoGameLibrary/Views/VideoGame/Create.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Create.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control textbox-color01" } })
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: My Cool New Game" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -25,7 +25,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ReleaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReleaseDate, new { htmlAttributes = new { @class = "form-control textbox-color01" } })
+                @Html.EditorFor(model => model.ReleaseDate, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: March 1, 2018" } })
                 @Html.ValidationMessageFor(model => model.ReleaseDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -33,7 +33,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ReleaseYear, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReleaseYear, new { htmlAttributes = new { @class = "form-control textbox-color01" } })
+                @Html.EditorFor(model => model.ReleaseYear, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: 2018" } })
                 @Html.ValidationMessageFor(model => model.ReleaseYear, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -41,7 +41,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Developer, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Developer, new { htmlAttributes = new { @class = "form-control textbox-color01" } })
+                @Html.EditorFor(model => model.Developer, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: Evan Friis" } })
                 @Html.ValidationMessageFor(model => model.Developer, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -49,7 +49,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Publisher, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Publisher, new { htmlAttributes = new { @class = "form-control textbox-color01" } })
+                @Html.EditorFor(model => model.Publisher, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: C00l V1D30 G4M35" } })
                 @Html.ValidationMessageFor(model => model.Publisher, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -60,6 +60,8 @@
                 <input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "VideoGame")'" />
             </div>
         </div>
+
+        <input type="date" />
     </div>
 }
 
