--- a/VideoGameLibrary/Views/VideoGame/Create.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Create.cshtml
@@ -11,58 +11,68 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: My Cool New Game" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
+<div class="form-horizontal">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: My Cool New Game" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ReleaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ReleaseDate, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: March 1, 2018" } })
-                @Html.ValidationMessageFor(model => model.ReleaseDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ReleaseYear, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ReleaseYear, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: 2018" } })
-                @Html.ValidationMessageFor(model => model.ReleaseYear, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Developer, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Developer, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: Evan Friis" } })
-                @Html.ValidationMessageFor(model => model.Developer, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Publisher, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Publisher, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: C00l V1D30 G4M35" } })
-                @Html.ValidationMessageFor(model => model.Publisher, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Add" class="btn btn-success" />
-                <input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "VideoGame")'" />
-            </div>
-        </div>
-
-        <input type="date" />
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.ReleaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ReleaseDate, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: March 1, 2018" } })
+            @Html.ValidationMessageFor(model => model.ReleaseDate, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.ReleaseYear, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ReleaseYear, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: 2018" } })
+            @Html.ValidationMessageFor(model => model.ReleaseYear, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Developer, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Developer, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: Evan Friis" } })
+            @Html.ValidationMessageFor(model => model.Developer, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Publisher, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Publisher, new { htmlAttributes = new { @class = "form-control textbox-color01", @placeholder = "ex: C00l V1D30 G4M35" } })
+            @Html.ValidationMessageFor(model => model.Publisher, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    @*YouTube Embed Link Add*@
+    <div class="form-group">
+        @Html.LabelFor(model => model.YouTubeEmbedLink, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.YouTubeEmbedLink, new { htmlAttributes = new { @class = "form-control textbox-color01" } })
+            @Html.ValidationMessageFor(model => model.YouTubeEmbedLink, "", new { @class = "text-danger" })
+            <small class="form-text text-muted">ex: "https://www.youtube.com/embed/l_zsz_MlVvI?rel=0"</small>
+        </div>        
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Add" class="btn btn-success" />
+            <input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "VideoGame")'" />
+        </div>        
+    </div>
+
+    <input type="date" />
+</div>
 }
 
 @section Scripts {
