--- a/VideoGameLibrary/Views/VideoGame/Details.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Details.cshtml
@@ -5,43 +5,48 @@
 }
 
 <h2>Details</h2>
+<div class="row">
+    <div class="col-md-6">
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-<div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ReleaseDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ReleaseDate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ReleaseDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ReleaseDate)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Developer)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Developer)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Developer)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Developer)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Publisher)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Publisher)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Publisher)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Publisher)
-        </dd>
+        </dl>
+    </div>
 
-    </dl>
+    <div class="col-md-6">
+        <iframe width="560" height="315" src="@Html.DisplayFor(model => model.YouTubeEmbedLink)" frameborder="0" allowfullscreen></iframe>
+    </div>
 </div>
 
 <div class="form-group">
