--- a/VideoGameLibrary/Views/VideoGame/Create.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Create.cshtml
@@ -60,7 +60,7 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.YouTubeEmbedLink, new { htmlAttributes = new { @class = "form-control textbox-color01" } })
             @Html.ValidationMessageFor(model => model.YouTubeEmbedLink, "", new { @class = "text-danger" })
-            <small class="form-text text-muted">ex: "https://www.youtube.com/embed/l_zsz_MlVvI?rel=0"</small>
+            <small class="form-text text-muted">ex: "https://www.youtube.com/embed/l_zsz_MlVvI"</small>
         </div>        
     </div>
 
