--- a/VideoGameLibrary/Views/VideoGame/Edit.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Edit.cshtml
@@ -62,6 +62,7 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.YouTubeEmbedLink, new { htmlAttributes = new { @class = "form-control textbox-color01" } })
             @Html.ValidationMessageFor(model => model.YouTubeEmbedLink, "", new { @class = "text-danger" })
+            <small class="form-text text-muted">ex: "https://www.youtube.com/embed/l_zsz_MlVvI"</small>
         </div>
     </div>
 
