--- a/VideoGameLibrary/Views/VideoGame/Create.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Create.cshtml
@@ -67,6 +67,7 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Add" class="btn btn-success" />
+            <input type="button" value="Reset" class="btn btn-warning" onclick="location.href = '@Url.Action("Create", "VideoGame")'" />
             <input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "VideoGame")'" />
         </div>        
     </div>
