--- a/VideoGameLibrary/Views/VideoGame/Index.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Index.cshtml
@@ -27,7 +27,7 @@
             @Html.DropDownList("yearFilter",
                                new SelectList(@ViewBag.Years),
                                "All Years",
-                               new { @class = "dropdown-item" })
+                               new { @class = "dropdown-item textbox-color01" })
         </div>
 
         <div class="form-group">
