Reorginized where buttons are located on the website. Only Details,Add, Search and Resest are visible from the List page. Edit and Delete buttons now located in the details page.

--- a/VideoGameLibrary/Views/VideoGame/Create.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Create.cshtml
@@ -67,9 +67,9 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Add" class="btn btn-success" />
-            <input type="button" value="Reset" class="btn btn-warning" onclick="location.href = '@Url.Action("Create", "VideoGame")'" />
-            <input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "VideoGame")'" />
+            <input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "VideoGame")'" />            
+            <input type="button" value="Clear All" class="btn btn-warning" onclick="location.href = '@Url.Action("Create", "VideoGame")'" />
+            <input type="submit" value="Add" class="btn btn-success" />            
         </div>        
     </div>
 </div>
