--- a/VideoGameLibrary/Views/VideoGame/Edit.cshtml
+++ b/VideoGameLibrary/Views/VideoGame/Edit.cshtml
@@ -69,8 +69,8 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-success" />
-            <input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "VideoGame")'" />
+            <input type="button" value="Back" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "VideoGame", new { id = Model.Id })'" />
+            <input type="submit" value="Save" class="btn btn-success" />            
         </div>
     </div>
 </div>
